fix: drawer body overflow

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -132,6 +132,7 @@ input {
   }
   .el-drawer__body {
     margin: 1rem;
+    overflow: auto;
   }
 }
 .el-drawer {
